--- a/styles/style.css
+++ b/styles/style.css
@@ -49,9 +49,8 @@ h1 {
 }
 
 h2 {
-    font-weight: 500;
-    line-height: 1.9;
-    font-size: 1.2rem;
+	font-size: 1rem;
+	text-transform: uppercase;
 }
 
 h3 {
@@ -59,7 +58,6 @@ h3 {
     line-height: 1.5;
     font-size: 1.4rem;
 }
-
 
 
 /* ============== Header =============== */
@@ -75,7 +73,7 @@ h3 {
 }
 
 .site-header .nav-btn {
-	cursor: pointer;;
+	cursor: pointer;
 	font-weight: 500;
 	text-transform: uppercase;
 	margin: 0 .5rem;
@@ -88,7 +86,201 @@ h3 {
 	border: var(--dark-grey-color) 1px solid;
 }
 
-i {
-	padding: .5rem;
-	background: cadetblue;
+/* ============== Main content =============== */
+.main-content {
+	padding: 2rem;
+	width: 100%;
+	height: 100%;
+	justify-content: space-between;
 }
+
+/* ============== Game image =============== */
+.image-wrapper {
+	border: 1px solid black;
+}
+
+.image-wrapper img {
+	width: 350px;
+}
+
+/* ============== Game word =============== */
+.word-wrapper {
+	transform: translateY(-100px);
+	transition: transform 1.5s ease-in-out;
+	font-size: 6rem;
+	text-transform: uppercase;
+}
+
+.word-wrapper.move {
+	transform: translateY(0px);
+}
+
+/* ============== On-screen keyboard =============== */
+.keyboard-wrapper .keyboard {
+	display: grid;
+	transform: translateY(+60vh);
+	transition: transform 1.5s ease-in-out;
+	grid-template-columns: repeat(13, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	gap: 10px;
+	justify-content: center;
+	text-align: center;
+	align-items: center;
+}
+
+.keyboard-wrapper .keyboard.kb-show {
+	transform: translateY(0px);
+}
+
+.keyboard-wrapper .keyboard .letter {
+	line-height: 65px;
+	width: 70px;
+	height: 70px;
+	background: #fff;
+	border: 2px #333333 solid;
+	border-radius: 10px;
+	font-size: 2.5rem;
+	text-transform: uppercase;
+	cursor: pointer;
+	-webkit-tap-highlight-color: transparent;
+	transition: all 0.1s ease-in-out;
+}
+
+.keyboard-wrapper .keyboard .letter:hover {
+	background: #f4f4f4;
+	transform: scale(0.995);
+}
+
+.keyboard-wrapper .keyboard .letter:active {
+	transform: scale(1.15);
+}
+
+.keyboard-wrapper .keyboard .letter-used {
+	color: #f0f0f0;
+	line-height: 65px;
+	width: 70px;
+	height: 70px;
+	background: #fff;
+	border: 2px #f0f0f0 solid;
+	border-radius: 10px;
+	font-size: 2.5rem;
+	text-transform: uppercase;
+}
+
+/* ============== Menus =============== */
+
+menu .menu-box {
+	align-items: flex-start;
+	display: none;
+	background-color: #fff;
+	position: absolute;
+	top: 200px;
+	width: 600px;
+	padding: 25px;
+	border-radius: 20px;
+	z-index: 15;
+}
+
+menu .backdrop {
+	display: none;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	opacity: 75%;
+}
+
+.show {
+	display: flex !important;
+}
+
+menu .menu-box .game-setup {
+	display: none;
+	flex-direction: column;
+	font-weight: bold;
+}
+
+menu .menu-box .game-setup h2 {
+	font-weight: bold;
+	margin-bottom: 50px;
+}
+
+menu .menu-box .game-setup input {
+
+	width: 400px;
+	height: 50px;
+	border: #333333 solid 2px;
+	font-size: 2rem;
+	border-radius: 5px;
+	outline: none;
+	padding: 5px;
+	margin-bottom: 20px;
+	box-shadow: 2px 4px 4px 2px #888888;
+	text-transform: uppercase;
+}
+
+menu .menu-box .game-setup input:focus {
+	border: 3px solid #333333;
+	background: #f9f9f9;
+}
+
+.close-input {
+	width: 0px !important;
+	transition: width 0.4s ease-in-out !important;
+	box-shadow: 2px 4px 4px 2px #888888 !important;
+}
+
+menu .menu-box .game-setup button {
+	margin: 0 .5rem;
+	font-size: 1.5rem;
+}
+
+
+menu .menu-box .game-setup div {
+	flex-direction: row;
+}
+
+menu .menu-box .post-game {
+	display: none;
+	flex-direction: column;
+	font-weight: bold;
+}
+
+menu .menu-box .post-game .stats {
+	margin-bottom: 20px;
+}
+
+menu .menu-box .post-game img {
+	width: 350px;
+	height: 200px;
+	border: 2px solid #333;
+	border-radius: 20px;
+	margin-bottom: 10px;
+}
+
+menu .menu-box .post-game .play-again {
+	font-size: 1.5rem;
+	margin-bottom: 10px;
+}
+menu .menu-box .post-game .answer {
+	color: white;
+	background: #333;
+	font-size: 2rem;
+	padding: 2px 10px 4px 2px;
+	text-align: center;
+	text-transform: uppercase;
+	margin-bottom: 10px;
+}
+
+menu .menu-box .quit-menu {
+	display: none;
+	flex-direction: column;
+}
+
+menu .menu-box .quit-menu h2 {
+	margin-bottom: 20px;
+}
+
+
